Fix Ra-den 25 man (different encounter id) not showing on map Add shadow to boss title on best times page SQL join optimizations

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -811,6 +811,7 @@ a.changelog:hover
 {
     color:#fff;
     text-align: center;
+    text-shadow: 2px 2px #669933;
 }
 
 .bossKillContainer a
